# scooter-controls

./: Cargo.toml  build.rs  sdkconfig.defaults
.cargo/: config.toml
src/: keyboard.rs  main.rs
