[package]
name = "scooter-controls"
version = "0.1.0"
authors = ["Shaun Keys <mariobuddy@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
# esp-idf-sys = { version = "0.33.7" }
esp-idf-sys = { version = "0.33.7", features = ["binstart"] }
esp-idf-hal = { version = "0.42.5"}
esp-idf-svc = { version = "0.47.3"}
esp32-nimble = "0.4.0"
log = "0.4.17"

[build-dependencies]
embuild = "0.31.1"
